--- a/map/src/main/resources/application.properties
+++ b/map/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://mysql4.cs.stonybrook.edu:3306/shezhou
-spring.datasource.username=shezhou
-spring.datasource.password=110288394
+spring.datasource.url = jdbc:mysql://mysql3.cs.stonybrook.edu:3306/nationals
+spring.datasource.username=nationals
+spring.datasource.password=changeit
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
 spring.jpa.database = MYSQL
