--- a/map/src/main/resources/application.properties
+++ b/map/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://mysql3.cs.stonybrook.edu:3306/nationals
 spring.datasource.username=nationals
-spring.datasource.password=changeit
+spring.datasource.password=NPC12345
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
 spring.jpa.database = MYSQL
