--- a/map/src/main/resources/application.properties
+++ b/map/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.url = jdbc:mysql://mysql3.cs.stonybrook.edu:3306/nationals
 spring.datasource.username=nationals
 spring.datasource.password=NPC12345
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.mysql.MySQL56InnoDBSpatialDialect
 spring.jpa.database = MYSQL
 
