--- a/map/pom.xml
+++ b/map/pom.xml
@@ -90,6 +90,16 @@
             <artifactId>jts-io</artifactId>
             <version>1.14.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.1.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>5.1.3.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
