--- a/map/src/main/resources/application.properties
+++ b/map/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.password=NPC12345
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.mysql.MySQL56InnoDBSpatialDialect
 spring.jpa.database = MYSQL
-
+spring.jpa.hibernate.use-new-id-generator-mappings= false
